add `/ip` endpoint
